Squashed commit of the following:
commit 6e157db8b53919cc7cfcbd3defded09ac87b2c79
Author: Peter Harrison <16875803+palisadoes@users.noreply.github.com>
Date:   Wed Feb 28 13:49:06 2024 -0800

    Revert "Revert "feat: Integrated Dicebear Library To Enhance Security (#1585)…" (#1635)

    This reverts commit ebcc97728b866bf1e8538f09b07c842ac5202941.

commit ebcc97728b866bf1e8538f09b07c842ac5202941
Author: Peter Harrison <16875803+palisadoes@users.noreply.github.com>
Date:   Wed Feb 28 13:47:08 2024 -0800

    Revert "feat: Integrated Dicebear Library To Enhance Security (#1585)" (#1634)

    This reverts commit 7828c40038b1eb3cea610a23531d3d5cf39584f5.

commit da8df059594ab8aca72edb2b955770c7d3963ec1
Author: Peter Harrison <16875803+palisadoes@users.noreply.github.com>
Date:   Wed Feb 28 13:46:19 2024 -0800

    Revert "Revert "feat: Add support for Action Items (#1596)" (#1632)" (#1633)

    This reverts commit 22bdfa927db95c5e82c697ec0606c4e7e1f663f1.

commit 22bdfa927db95c5e82c697ec0606c4e7e1f663f1
Author: Peter Harrison <16875803+palisadoes@users.noreply.github.com>
Date:   Wed Feb 28 13:44:15 2024 -0800

    Revert "feat: Add support for Action Items (#1596)" (#1632)

    This reverts commit a71db3bdc0ef16ed035d742dc3c7bd336e5ec016.

commit a71db3bdc0ef16ed035d742dc3c7bd336e5ec016
Author: Meetul Rathore <meetulrathore98@gmail.com>
Date:   Thu Feb 29 00:24:58 2024 +0530

    feat: Add support for Action Items (#1596)

    * add mutations and queries

    * add translations

    * add tests

    * add dropdown for toggling settings on small screens

    * minor corrections

    * minor change

    * initial changes

    * basic design

    * add basic modals

    * add create action item functionality

    * add update functionality

    * add delete functionality

    * add details modal

    * extract modals and restructure

    * add sorting

    * remove unnecessary files

    * add filters and design adjustments

    * add translations

    * don't show disab

--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -281,6 +281,41 @@
     "eventCreated": "恭喜！事件已創建。",
     "talawaApiUnavailable": "服務不可用。它在運行嗎？還要檢查您的網絡連接。"
   },
+  "organizationActionItems": {
+    "actionItemCategory": "行动项目类别",
+    "actionItemDetails": "行动项目详情",
+    "assignee": "受让人",
+    "assigner": "分配者",
+    "assignmentDate": "分配日期",
+    "active": "活跃",
+    "clearFilters": "清除筛选器",
+    "close": "关闭",
+    "completed": "已完成",
+    "completionDate": "完成日期",
+    "createActionItem": "创建",
+    "deleteActionItem": "删除行动项目",
+    "deleteActionItemMsg": "您是否要删除此行动项目？",
+    "details": "详情",
+    "dueDate": "到期日",
+    "earliest": "最早",
+    "editActionItem": "编辑行动项目",
+    "isCompleted": "已完成",
+    "latest": "最新",
+    "no": "否",
+    "noActionItems": "无行动项目",
+    "options": "选项",
+    "preCompletionNotes": "完成前的笔记",
+    "postCompletionNotes": "完成后的笔记",
+    "searchByName": "按名称搜索",
+    "selectActionItemCategory": "选择行动项目类别",
+    "selectAssignee": "选择受让人",
+    "status": "状态",
+    "successfulCreation": "行动项目创建成功",
+    "successfulUpdation": "行动项目更新成功",
+    "successfulDeletion": "行动项目删除成功",
+    "title": "行动项目",
+    "yes": "是"
+  },
   "eventListCard": {
     "location": "地點",
     "on": "上",
@@ -708,6 +743,7 @@
     "deleteAdvertisementMsg": "您是否要删除此广告？",
     "no": "不",
     "yes": "是",
+    "Rmedia": "提供要显示的媒体内容",
     "view": "查看",
     "edit": "编辑",
     "editAdvertisement": "编辑广告",
