Fix/postsby org (#1639)
* fix postByConnectionQuery

* Squashed commit of the following:

commit 6e157db8b53919cc7cfcbd3defded09ac87b2c79
Author: Peter Harrison <16875803+palisadoes@users.noreply.github.com>
Date:   Wed Feb 28 13:49:06 2024 -0800

    Revert "Revert "feat: Integrated Dicebear Library To Enhance Security (#1585)…" (#1635)

    This reverts commit ebcc97728b866bf1e8538f09b07c842ac5202941.

commit ebcc97728b866bf1e8538f09b07c842ac5202941
Author: Peter Harrison <16875803+palisadoes@users.noreply.github.com>
Date:   Wed Feb 28 13:47:08 2024 -0800

    Revert "feat: Integrated Dicebear Library To Enhance Security (#1585)" (#1634)

    This reverts commit 7828c40038b1eb3cea610a23531d3d5cf39584f5.

commit da8df059594ab8aca72edb2b955770c7d3963ec1
Author: Peter Harrison <16875803+palisadoes@users.noreply.github.com>
Date:   Wed Feb 28 13:46:19 2024 -0800

    Revert "Revert "feat: Add support for Action Items (#1596)" (#1632)" (#1633)

    This reverts commit 22bdfa927db95c5e82c697ec0606c4e7e1f663f1.

commit 22bdfa927db95c5e82c697ec0606c4e7e1f663f1
Author: Peter Harrison <16875803+palisadoes@users.noreply.github.com>
Date:   Wed Feb 28 13:44:15 2024 -0800

    Revert "feat: Add support for Action Items (#1596)" (#1632)

    This reverts commit a71db3bdc0ef16ed035d742dc3c7bd336e5ec016.

commit a71db3bdc0ef16ed035d742dc3c7bd336e5ec016
Author: Meetul Rathore <meetulrathore98@gmail.com>
Date:   Thu Feb 29 00:24:58 2024 +0530

    feat: Add support for Action Items (#1596)

    * add mutations and queries

    * add translations

    * add tests

    * add dropdown for toggling settings on small screens

    * minor corrections

    * minor change

    * initial changes

    * basic design

    * add basic modals

    * add create action item functionality

    * add update functionality

    * add delete functionality

    * add details modal

    * extract modals and restructure

    * add sor

--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -364,7 +364,9 @@
     "sortPost": "Trier les publications",
     "tag": "Votre navigateur ne prend pas en charge la balise vidéo",
     "postCreatedSuccess": "Félicitations ! Vous avez publié quelque chose.",
-    "pinPost": "Épingler le message"
+    "pinPost": "Épingler le message",
+    "Next": "Suivant ",
+    "Previous": "Précédent"
   },
   "postNotFound": {
     "post": "Poste",
