--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -365,7 +365,9 @@
     "sortPost": "पोस्ट को क्रमित करें",
     "tag": "आपका ब्राउज़र वीडियो टैग का समर्थन नहीं करता",
     "postCreatedSuccess": "बधाई हो! आपने कुछ पोस्ट किया है।",
-    "pinPost": "पोस्ट को पिन करें"
+    "pinPost": "पोस्ट को पिन करें",
+    "Next": "अगला पृष्ठ",
+    "Previous": "पिछला पृष्ठ"
   },
   "postNotFound": {
     "post": "पोस्ट",
