--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -323,6 +323,34 @@
     "eventUpdated": "इवेंट सफलतापूर्वक अपडेट किया गया।",
     "talawaApiUnavailable": "तलवा-एपीआई सेवा उपलब्ध नहीं है। क्या यह चल रहा है? अपनी नेटवर्क कनेक्टिविटी भी जांचें।"
   },
+  "funds": {
+    "title": "तलवा फंड्स",
+    "createFund": "फंड बनाएँ",
+    "fundName": "फंड का नाम",
+    "fundId": "फंड आईडी",
+    "fundOptions": "फंड विकल्प",
+    "noFunds": "कोई फंड नहीं",
+    "fundDetails": "फंड विवरण",
+    "taxDeductible": "कर कटौती",
+    "enterfundName": " फंड का नाम दर्ज करें",
+    "enterfundId": " फंड आईडी दर्ज करें",
+    "default": "डिफ़ॉल्ट",
+    "archived": "संग्रहीत",
+    "nonArchive": "गैर संग्रहीत",
+    "fundCreate": "फंड बनाएँ",
+    "fundUpdate": "फंड अपडेट करें",
+    "fundDelete": "फंड हटाएं",
+    "no": "नहीं",
+    "yes": "हाँ",
+    "archiveFund": "फंड संग्रहीत करें",
+    "archiveFundMsg": "क्या आप इस फंड को संग्रहीत करना चाहते हैं?",
+    "fundCreated": "फंड सफलतापूर्वक बनाया गया",
+    "fundUpdated": "फंड सफलतापूर्वक अपडेट किया गया",
+    "fundDeleted": "फंड सफलतापूर्वक हटाया गया",
+    "fundArchived": "फंड सफलतापूर्वक संग्रहीत किया गया",
+    "fundUnarchived": "फंड सफलतापूर्वक गैर संग्रहीत किया गया",
+    "deleteFundMsg": "क्या आप इस फंड को हटाना चाहते हैं?"
+  },
   "orgPost": {
     "title": "तलवा पोस्ट्स",
     "searchPost": "पोस्ट खोजें",
