--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -327,6 +327,34 @@
     "eventUpdated": "Event updated successfully.",
     "talawaApiUnavailable": "Talawa-API service is unavailable. Is it running? Check your network connectivity too."
   },
+  "funds": {
+    "title": "Talawa Funds",
+    "createFund": "Create",
+    "fundName": "Fund Name",
+    "fundId": "Fund ID",
+    "fundOptions": "Opitons",
+    "noFunds": "No Funds Found",
+    "fundDetails": "Fund Details",
+    "taxDeductible": "Tax Deductible",
+    "enterfundName": "Enter Fund Name",
+    "enterfundId": "Enter Fund ID",
+    "default": "Default Fund",
+    "archived": "Archived",
+    "nonArchive": "Non-Archived",
+    "fundCreate": "Create Fund",
+    "fundUpdate": "Update Fund",
+    "fundDelete": "Delete Fund",
+    "no": "No",
+    "yes": "Yes",
+    "archiveFund": "Archive Fund",
+    "archiveFundMsg": "On Archiving this fund will remove it from the fund listing.Thisaction can be undone",
+    "fundCreated": "Fund created successfully",
+    "fundUpdated": "Fund updated successfully",
+    "fundDeleted": "Fund deleted successfully",
+    "fundArchived": "Fund archived successfully",
+    "fundUnarchived": "Fund unarchived successfully",
+    "deleteFundMsg": "Do you want to remove this fund?"
+  },
   "orgPost": {
     "title": "Talawa Posts",
     "searchPost": "Search Post",
